package com.sewerrats.sewerratsapp.domain;

public enum Category {
    Heal,
    Status,
    Chest
}
