package com.sewerrats.sewerratsapp.domain;

public class Item_User {
}
