package com.sewerrats.sewerratsapp.domain;

public class Rat_User {
}
