package com.sewerrats.sewerratsapp.domain;

public enum Type {
    Fire,
    Water,
    Leaf,
    Flying,
    Lightning,
    Dark,
    Poison
}
