@startuml
class User<<Entity>>{
    Id: Long
    user_discord_tag: String
    user_discord_username: String
    user_coin: int
    user_profilePicture: String
    user_exp: double
}

class Item<<Entity>>{
    Id: Long
    item_name: String
    item_description: String
    item_heal: double
    item_paralyze: double
    item_poison: double
    item_sleep: double
    item_picture: String
    item_count: int
}


class Item_User<<Entity>>{
    Id:Long
    user: User
    item: Item
}

class Rat<<Entity>>{
    Id: Long
    rat_name: String
    rat_type: Type
    rat_price: double
    rat_possibility: double
    rat_health: double
    rat_speed: double
    rat_defense: double
    rat_damage: double
    rat_count: int
}

class Rat_User<<Entity>>{
    Id: Long
    rat: Rat
    user: User
}

class Ability<<Entity>>{
    Id: Long
    ability_name: String
    ability_price: double
    ability_possibility: double
    ability_damage: double
    ability_type: Type
}

class Fight<<Entity>>{
    Id: Long
    opponent_One: User
    opponent_Two: User
    draw: boolean
    winner: String
    loser: String
    battleStartedAt: LocalDateTime
    battleEndedAt: LocalDateTime

}

enum Type<<Entity>>{
Fire
Leaf
Poison
Water
Dark
Lightning
}

enum Category<<Entity>>{
Heal
Status
}


User "1" -- "n" Rat_User
Rat "1" -- "n" Rat_User
User "1" -- "n" Item_User
Item "1" -- "n" Item_User
User "1" -- "n" Fight
Fight "n" -- "1" User
Rat "n" -- "m" Ability
Rat -- Type
Ability -- Type
Item -- Category





@enduml